a11y friendly changes + buttons on form issues on mobile fix

--- a/public/main.css
+++ b/public/main.css
@@ -43,6 +43,7 @@
 .menuButtonHolder {
     display: flex;
     margin: auto;
+    width: 100%;
 }
 
 #storyBankForm .userButton {
@@ -544,6 +545,10 @@ legend {
 .storyContent {
     white-space: pre-wrap;
     overflow-wrap: break-word;
+}
+
+.imageUploadButton {
+    color: #d06502;
 }
 
 .imageURLThumb,
